--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <version>4.25.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-support</artifactId>
+            <version>4.25.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
